src/components/DesktopNav/DesktopNav.scss
nav {
  width: 100vw;
  height: 120px;

  .navWrapper {
    width: 100%;
    background-color: #ffffff;
    display: flex;
    flex-direction: column;
    position: fixed;
    top: 0;
    left: 0;

    .navTop {
      width: 100%;
      height: 50px;
      position: relative;

      .logoLeaf {
        width: 40px;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
      }

      .iconUser {
        width: 30px;
        position: absolute;
        top: 50%;
        right: 20px;
      }
    }

    .navBottom {
      width: 100%;
      height: 70px;

      .navTitle {
        display: flex;
        justify-content: space-around;
        align-items: center;
        width: 400px;
        height: 100%;
        padding: 20px;
        font-weight: 500;

        a {
          color: #000000;
        }

        a:hover {
          color: var(--mainColor--green);
        }
      }
    }
  }
}

